# MetalCMakeDemo

./: .gitignore  CMakeLists.txt  Info.plist  README.md
md/: 2026-04-21_full_conversation.md  2026-04-21_metal_learning_dialogue.md  2026-04-22_metal_performance_optimization.md
script/: build_and_run.sh
shaders/: triangle.metal
src/: AppDelegate.h  AppDelegate.mm  OpenGLCrossPlatformMain.cpp  OpenGLRenderer.h  OpenGLRenderer.mm  Renderer.h  Renderer.mm  main.mm
